--- a/main.css
+++ b/main.css
@@ -1,3 +1,24 @@
 h1{
-  font-size: 100px
+  font-size: 100px;
+  color: navy;
+  font-family: Sans-serif;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
