--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 h1{
   font-size: 100px;
-  color: navy;
+  color: yellow;
   font-family: Sans-serif;
 }
 ul {
@@ -21,4 +21,13 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+}
+img{
+  opacity: 0.5;
+}
+
+div {
+    background: url(img_flwr.gif);
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
 }
