--- a/main.css
+++ b/main.css
@@ -1,9 +1,10 @@
 h1{
-  font-size: 100px;
+  font-size: 90px;
   color: orange;
   font-family: Sans-serif;
+  align:center;
 }
-ul {
+.navbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -11,13 +12,14 @@ ul {
     background-color: #333;
 }
 
-li {
+.list {
     float: left;
+
 }
 
 li a {
     display: block;
-    color: white;
+    color: green;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -35,8 +37,24 @@ p{
       margin-bottom: 100px;
       margin-right: 150px;
       margin-left: 80px;
+      color:black;
 }
 .quotes{
   font-family: "Arial Narrow", Arial, Helvetica, sans-serif;
   font-size: 30px
+}
+.movies{
+  list-style-type:circle;
+  color: white;
+  font-size: 30px
+  border: 3px;
+}
+a{
+  color:green;
+}
+
+iframe{
+  width:800;
+  height:450;
+  align:right;
 }
